welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: '(' expected but identifier found.
    if nums(i+1)>(nums(i)){
       ^maxValue:7: error: illegal start of simple expression
  }
  ^