welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var max :Int = nums(0)
  for (i <- 0 to nums.length-1){
    if nums(i+1)>(nums(i)){
      max=nums(i+1)
    }
  }
  return max
}